# KnowledgeOS

./: .dockerignore  .gitignore  README.md  compose.yaml
backend/: Cargo.toml
backend/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
backend/src/api/: error.rs  files.rs  health.rs  mod.rs  tree.rs
backend/src/domain/: document.rs  mod.rs  path.rs  tree.rs
backend/src/infrastructure/: markdown.rs  markdown_writer.rs  mod.rs  tree.rs  vault.rs
backend/tests/: file_create_contract.rs  file_read_contract.rs  file_update_contract.rs  health_contract.rs  tree_contract.rs  vault_startup.rs
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf  smoke.sh
docs/: a10-lazy-tree-plan.md  api.md  architecture.md  b01-pwa-skeleton-plan.md  b02-responsive-app-shell-plan.md  b03-tree-state-model-plan.md  b04-lazy-tree-ui-plan.md  b05-open-file-flow-plan.md  b06-codemirror-editor-spike-plan.md  b07-editor-save-state-machine-plan.md  b08-browser-draft-recovery-plan.md  data-model.md  decision-record.md  directory-structure.md  docker.md  frontend-components.md  git-backup.md  incremental-implementation-plan.md  knowledgeos-roadmap.drawio  obsidian-vault-migration-plan.md  path-policy.md  reference-implementation-analysis.md  roadmap.md  silverbullet-decommission-plan.md  vault-policy.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: verify-pwa.mjs
frontend/src/: App.vue  main.ts  pwa.ts
frontend/src/__tests__/: App.spec.ts  FileTreePanel.spec.ts  MarkdownEditorSpike.spec.ts  MarkdownPreview.spec.ts  OpenFileFlow.spec.ts  setup.ts  (+10 more)
knowledge/: README.md
scripts/: migrate-obsidian-vault.sh
(+25 files in other folders)
